[gd_scene load_steps=2 format=3 uid="uid://d2u01d6wpxjbn"]

[ext_resource type="Script" path="res://scenes/ui/authenticate/authenticate_script.gd" id="1_pqpqq"]

[node name="AuthenticateUI" type="PanelContainer" node_paths=PackedStringArray("title_label", "close_button", "email_edit", "password_edit", "send_button")]
custom_minimum_size = Vector2(250, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -32.0
offset_right = 75.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pqpqq")
title = "Acessar"
title_label = NodePath("LayoutVBox/TopBar/TopBarContentMargin/TopBarContentHBox/Title")
close_button = NodePath("LayoutVBox/TopBar/TopBarContentMargin/TopBarContentHBox/CloseButton")
email_edit = NodePath("LayoutVBox/ContentMargin/ContentVBox/EmailEdit")
password_edit = NodePath("LayoutVBox/ContentMargin/ContentVBox/PasswordEdit")
send_button = NodePath("LayoutVBox/ContentMargin/ContentVBox/SendButton")

[node name="LayoutVBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TopBar" type="Panel" parent="LayoutVBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="TopBarContentMargin" type="MarginContainer" parent="LayoutVBox/TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="TopBarContentHBox" type="HBoxContainer" parent="LayoutVBox/TopBar/TopBarContentMargin"]
layout_mode = 2

[node name="Title" type="Label" parent="LayoutVBox/TopBar/TopBarContentMargin/TopBarContentHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Acessar"

[node name="CloseButton" type="Button" parent="LayoutVBox/TopBar/TopBarContentMargin/TopBarContentHBox"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
text = "X"

[node name="ContentMargin" type="MarginContainer" parent="LayoutVBox"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ContentVBox" type="VBoxContainer" parent="LayoutVBox/ContentMargin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="EmailEdit" type="LineEdit" parent="LayoutVBox/ContentMargin/ContentVBox"]
layout_mode = 2
placeholder_text = "Email"

[node name="PasswordEdit" type="LineEdit" parent="LayoutVBox/ContentMargin/ContentVBox"]
layout_mode = 2
placeholder_text = "Senha"

[node name="SendButton" type="Button" parent="LayoutVBox/ContentMargin/ContentVBox"]
layout_mode = 2
text = "Acessar"

[connection signal="pressed" from="LayoutVBox/TopBar/TopBarContentMargin/TopBarContentHBox/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="LayoutVBox/ContentMargin/ContentVBox/SendButton" to="." method="_on_send_button_pressed"]
